<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--TOOLBAR
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/color_main"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2">
        </View>
        <TextView
            style="@style/recuperacion_title"/>
        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:src="@drawable/ic_cancel_white_48dp" />

    </LinearLayout>
    -->
    <include layout="@layout/actionbar_toolbar" />

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:background="@color/color_main_background"
        android:visibility="gone"
        android:gravity="center_horizontal|center_vertical">

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="@color/color_main_background"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_txt_name"
                        style="@style/register_txt_info"
                        android:hint="@string/prompt_register_name"
                        android:imeActionId="@+id/register_txt_name"
                        android:imeActionLabel="@string/action_register_name"></EditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_txt_lastnamePat"
                        style="@style/register_txt_info"
                        android:hint="@string/prompt_register_lastnamePat"
                        android:imeActionId="@+id/register_txt_lastnamePat"
                        android:imeActionLabel="@string/action_register_lastnamePat"></EditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_txt_lastnameMat"
                        style="@style/register_txt_info"
                        android:hint="@string/prompt_register_lastnameMat"
                        android:imeActionId="@+id/register_txt_lastnameMat"
                        android:imeActionLabel="@string/action_register_lastnameMat"></EditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/register_txt_email"
                        style="@style/register_txt_email"
                        android:hint="@string/prompt_register_email"
                        android:imeActionId="@+id/register_txt_email"
                        android:imeActionLabel="@string/action_register_email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/register_txt_emailConfirm"
                        style="@style/register_txt_email"
                        android:hint="@string/prompt_register_emailConfirm"
                        android:imeActionId="@+id/register_txt_emailConfirm"
                        android:imeActionLabel="@string/action_register_emailConfirm" />
                </android.support.design.widget.TextInputLayout>

                <View style="@style/register_field_divider" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_txt_empresa"
                        style="@style/register_txt_info"
                        android:hint="@string/prompt_register_empresa"
                        android:imeActionId="@+id/register_txt_empresa"
                        android:imeActionLabel="@string/action_register_empresa"></EditText>
                </android.support.design.widget.TextInputLayout>

                <View style="@style/register_field_divider" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_txt_account"
                        style="@style/register_txt_info"
                        android:hint="@string/prompt_register_account"
                        android:imeActionId="@+id/register_txt_account"
                        android:imeActionLabel="@string/action_register_account"></EditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_txt_masterpin"
                        style="@style/register_txt_info"
                        android:hint="@string/prompt_register_masterpin"
                        android:imeActionId="@+id/register_txt_masterpin"
                        android:imeActionLabel="@string/action_register_masterpin"></EditText>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_txt_username"
                        style="@style/login_txt_password"
                        android:hint="@string/prompt_register_username"
                        android:imeActionId="@+id/register_txt_username"
                        android:imeActionLabel="@string/action_register_username"></EditText>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_txt_password"
                        style="@style/login_txt_password"
                        android:inputType="textPassword"
                        android:hint="@string/prompt_register_password"
                        android:imeActionId="@+id/register_txt_password"
                        android:imeActionLabel="@string/action_register_password" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/register_txt_passwordConfirm"
                        style="@style/login_txt_password"
                        android:hint="@string/prompt_register_passwordConfirm"
                        android:imeActionId="@+id/register_txt_passwordConfirm"
                        android:imeActionLabel="@string/action_register_passwordConfirm" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/color_main"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/register_btn_aceptar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="0.45"
                android:text="@string/Create"
                android:theme="@style/register_btns" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"></View>

            <Button
                android:id="@+id/register_btn_clean"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0.45"
                android:text="@string/txt_btn_clean"
                android:theme="@style/register_btns" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
