<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_main"
        android:orientation="vertical">

        <!-- TOOLBAR -->
        <include layout="@layout/actionbar_recovery" />

        <!-- Login progress -->
        <LinearLayout
            android:id="@+id/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:orientation="vertical"
            android:background="@color/color_main_background"
            android:visibility="gone"
            android:gravity="center_horizontal|center_vertical">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

        <!-- BODY-->
        <LinearLayout
            android:id="@+id/layout_recovery"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:background="@color/color_main_background"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/recovery_txt_login"
                        style="@style/register_txt_info"
                        android:hint="@string/prompt_register_username"
                        android:imeActionId="@+id/recovery_txt_login"
                        android:imeActionLabel="@string/action_register_username"></EditText>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <!-- FOOTER-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_recovery_recovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_btn_send"
                android:theme="@style/register_btns" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
